force-app/main/default/objects/Phase__c/Phase__c.object-meta.xml
<CustomObject>
    <description>The Phase is a SAP table that is passed into SF via integration 28858</description>
    <label>Phase</label>
    <nameField>
        <label>Phase Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Phases</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>