force-app/main/default/objects/Phase__c/fields/Lookup_Formula__c.field-meta.xml
<CustomField>
    <fullName>Lookup_Formula__c</fullName>
    <formula>Service_Resource__r.Name &amp;&quot;-&quot;&amp;  SAP_Phase_WBS_Number__c &amp;&quot; (&quot;&amp;TEXT( Status__c )&amp;&quot;)&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lookup Formula</label>
    <type>Text</type>
</CustomField>