force-app/main/default/objects/Phase__c/fields/NPLUS_Job__c.field-meta.xml
<CustomField>
    <fullName>NPLUS_Job__c</fullName>
    <label>NPLUS Job</label>
    <referenceTo>NPLUS_Job__c</referenceTo>
    <relationshipLabel>Phases</relationshipLabel>
    <relationshipName>Phase</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>