force-app/main/default/objects/Phase__c/fields/SAP_Phase_WBS_Number__c.field-meta.xml
<CustomField>
    <fullName>SAP_Phase_WBS_Number__c</fullName>
    <description>#28858</description>
    <externalId>true</externalId>
    <inlineHelpText>From SAP this number is used to enable proper accounting.</inlineHelpText>
    <label>SAP Phase/WBS Number</label>
    <length>24</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>