force-app/main/default/objects/Phase__c/fields/Service_Resource__c.field-meta.xml
<CustomField>
    <fullName>Service_Resource__c</fullName>
    <description>#28858 This should be part of the integration. #28050 Restrict to Technician Types</description>
    <inlineHelpText>Most often the Crew Leader or Foreman Service Resource record.</inlineHelpText>
    <label>Service Resource</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Service Resource must be of type Technician</errorMessage>
        <filterItems>
            <field>ServiceResource.ResourceType</field>
            <operation>equals</operation>
            <value>Technician</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>ServiceResource</referenceTo>
    <relationshipLabel>Phases</relationshipLabel>
    <relationshipName>Contract_Job_Resource_Relationships</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>