force-app/main/default/objects/Phase__c/fields/Service_Resource_Name__c.field-meta.xml
<CustomField>
    <fullName>Service_Resource_Name__c</fullName>
    <description>28051 For datatable</description>
    <formula>Service_Resource__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Resource</label>
    <type>Text</type>
</CustomField>