force-app/main/default/objects/Phase__c/fields/Service_Resource_User_ID__c.field-meta.xml
<CustomField>
    <fullName>Service_Resource_User_ID__c</fullName>
    <formula>Service_Resource__r.User_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Resource User ID</label>
    <type>Text</type>
</CustomField>