force-app/main/default/objects/Phase__c/validationRules/SAP_Phase_WBS_Number_Length.validationRule-meta.xml
<ValidationRule>
    <fullName>SAP_Phase_WBS_Number_Length</fullName>
    <active>true</active>
    <description>28858- WBS Number from SAP must be 24 characters in length
Bug 31002 extended it to 24 from 20</description>
    <errorConditionFormula>LEN(SAP_Phase_WBS_Number__c )&lt;&gt;24</errorConditionFormula>
    <errorMessage>WBS Number from SAP must be 20 characters in length</errorMessage>
</ValidationRule>