force-app/main/default/objects/Phase__c/listViews/All_Phases.listView-meta.xml
<ListView>
    <fullName>All_Phases</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>NPLUS_Job__c</columns>
    <columns>Service_Resource__c</columns>
    <columns>SAP_Phase_WBS_Number__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Phases</label>
</ListView>